fix: spacing on landing page

--- a/src/styles/landingpage.css
+++ b/src/styles/landingpage.css
@@ -1,7 +1,7 @@
 .landing-description {
 	text-align: justify;
-	font-size: calc(1rem + 0.5vw);
-	line-height: calc(2rem + 0.5vw);
+	font-size: calc(1rem + 0.25vw);
+	line-height: calc(1.75rem + 0.75vw);
 	color: var(--text-secondary);
 	margin-bottom: 1.5rem;
 	max-width: 50ch;
@@ -76,7 +76,7 @@
 }
 
 .middle-row {
-	height: calc(40rem - 16vw);
+	height: calc(35rem - 14vw);
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
